# inih

./: meson.build
examples/: ini_dump.c
tests/: unittest.c  unittest_string.c
